--- a/css/dash.css
+++ b/css/dash.css
@@ -1,8 +1,3 @@
-@import url(https://fonts.googleapis.com/css?family=Open+Sans);
-body {
-  font-family: "Open Sans", serif;
-}
-
 wrapper {
   display: grid;
   grid-template-columns: 1fr;
@@ -15,7 +10,7 @@ wrapper {
   wrapper {
     grid-template-columns: 250px repeat(3, 1fr);
     grid-template-rows: 60px 1fr 50px;
-    grid-template-areas: "header     header     header    header" "aside     main       main      main" "aside     footer     footer    footer";
+    grid-template-areas: "header header  header  header" "aside  main    main    main" "aside  footer    footer    footer";
   }
 
   /* hide toggle */
@@ -23,92 +18,90 @@ wrapper {
     display: none;
   }
 }
-.header {
+.mg-header {
   background-color: #fff;
   grid-area: header;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 0 20px;
+  padding: 0 10px;
   z-index: 999;
   -webkit-box-shadow: 0px 1px 5px 0px rgba(0, 0, 0, 0.75);
   -moz-box-shadow: 0px 1px 5px 0px rgba(0, 0, 0, 0.75);
   box-shadow: 0px 1px 5px 0px rgba(0, 0, 0, 0.75);
 }
-.header-title {
+.mg-header-title {
   display: flex;
   justify-self: start;
   align-items: center;
 }
-.header-title > h1 {
-  margin: 0 0 2px;
+.mg-header-title h1 {
+  margin-left: 10px;
 }
-.header-nav ul {
+.mg-header-nav ul {
   display: flex;
   list-style: none;
   margin: 0;
   padding: 0;
 }
-.header-nav a {
+.mg-header-nav a {
   padding: 10px;
 }
 
-.header a {
+.mg-header a {
   text-decoration: none;
   color: #212121;
 }
 
-.main {
+.mg-main {
   background-color: #fafafa;
+  display: flex;
+  flex-direction: column;
   grid-area: main;
 }
-.main-content {
+.mg-main-content {
   padding: 20px;
 }
-.main-content p {
+.mg-main-content p {
   margin: 0;
   padding: 0;
   line-height: 25px;
   color: #212121;
 }
 
-.aside {
+.mg-aside {
   background-color: #212121;
   grid-area: aside;
   z-index: 998;
 }
-.aside-nav {
+.mg-aside-nav {
   margin: 0;
   padding: 0;
 }
-.aside-nav ul {
+.mg-aside-nav ul {
   margin: 0;
   padding: 0;
   margin-top: 20px;
   list-style: none;
 }
-.aside-nav a {
+.mg-aside-nav a {
   display: block;
-  padding: 10px 10px 10px 20px;
+  padding: 10px 20px;
   text-decoration: none;
   color: white;
 }
-.aside-nav a:hover {
+.mg-aside-nav a:hover {
   background-color: #263238;
 }
-.aside-nav span {
+.mg-aside-nav span {
   margin-left: 10px;
 }
 
-footer {
-  background-color: #fafafa;
+.mg-footer {
   grid-area: footer;
-}
-
-footer p {
-  color: #212121;
-  font-size: small;
-  text-align: center;
+  display: flex;
+  justify-content: center;
+  background-color: #fafafa;
 }
 
 /* media query for nav styles */
@@ -130,25 +123,26 @@ footer p {
     transform: translateX(250px);
   }
 
-  .sidebar-toggle {
+  .mg-aside-toggle {
     display: flex;
     height: 60px;
     justify-content: flex-end;
     align-items: center;
+    padding: 0 10px;
   }
 
-  .sidebar-toggle a {
+  .mg-aside-toggle a {
     text-decoration: none;
     color: white;
   }
 
-  .sidebar-toggle a:hover {
+  .mg-aside-toggle a:hover {
     color: #B0BEC5;
   }
 
   .toggle {
     text-decoration: none;
-    padding-right: 20px;
+    padding: 10px;
   }
 }
 
