--- a/sass/dash.scss
+++ b/sass/dash.scss
@@ -1,8 +1,3 @@
-@import url(https://fonts.googleapis.com/css?family=Open+Sans);
-body{
-   font-family: 'Open Sans',serif;
-}
-
 wrapper {
     display: grid;
     grid-template-columns: 1fr;
@@ -13,18 +8,15 @@ wrapper {
         "footer"
     ;
     height: 100vh;
-    //margin: 0 auto;
-    //max-width: 1101px;
-    //font-size: 1.2em;
 }
 @media (min-width: 768px) {
     wrapper {
         grid-template-columns: 250px repeat(3, 1fr);
         grid-template-rows: 60px 1fr 50px;
         grid-template-areas:
-            "header     header     header    header"
-            "aside     main       main      main"
-            "aside     footer     footer    footer"
+            "header header  header  header"
+            "aside  main    main    main"
+            "aside  footer    footer    footer"
         ;
     }
     /* hide toggle */
@@ -34,13 +26,13 @@ wrapper {
 }
 
 
-.header {
+.mg-header {
     background-color: #fff;
     grid-area: header;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 0 20px;
+    padding: 0 10px;
     z-index: 999;
     //border-bottom: 1px solid #9E9E9E;
     -webkit-box-shadow: 0px 1px 5px 0px rgba(0,0,0,0.75);
@@ -51,8 +43,8 @@ wrapper {
         justify-self: start;
         align-items: center;
     }
-    &-title > h1 {
-        margin: 0 0 2px;
+    &-title  h1 {
+        margin-left: 10px;
     }
     &-nav ul {
         display: flex;
@@ -64,13 +56,15 @@ wrapper {
         padding: 10px;
     }
 }
-.header a {
+.mg-header a {
     text-decoration: none;
     color: #212121;
 }
 
-.main {
+.mg-main {
     background-color:#fafafa;
+    display: flex;
+    flex-direction: column;
     grid-area: main;
     &-content {
         padding: 20px;
@@ -83,7 +77,7 @@ wrapper {
     }
 }
 
-.aside {
+.mg-aside {
     background-color: #212121;
     grid-area: aside;
     z-index: 998;
@@ -100,7 +94,7 @@ wrapper {
     
     &-nav a {
         display: block;
-        padding: 10px 10px 10px 20px;
+        padding: 10px 20px;
         text-decoration: none;
         color: white;
         
@@ -112,17 +106,12 @@ wrapper {
         margin-left: 10px;
     }
 }
-
-footer {
-    background-color: #fafafa;
+.mg-footer {
     grid-area: footer;
+    display: flex;
+    justify-content: center;
+    background-color:#fafafa;
 }
-footer p {
-    color: #212121;
-    font-size: small;
-    text-align: center;
-}
-
 /* media query for nav styles */
 @media only screen and (max-width: 767px) {
     
@@ -140,21 +129,22 @@ footer p {
     #aside:target {     
       transform: translateX(250px);
     }
-    .sidebar-toggle {
+    .mg-aside-toggle {
         display: flex; // posicionar individualmente botao fechar
         height: 60px;
         justify-content: flex-end;
         align-items: center;
+        padding: 0 10px;
     }
-    .sidebar-toggle a {
+    .mg-aside-toggle a {
         text-decoration: none;
         color: white;
     }
-    .sidebar-toggle a:hover {
+    .mg-aside-toggle a:hover {
         color: #B0BEC5;
     }
     .toggle {
         text-decoration: none;
-        padding-right: 20px;
-     }  
+        padding: 10px;
+    }  
 }
